sg.tf
resource "aws_security_group" "example" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example1" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example2" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example3" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example4" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example5" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example6" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example7" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example8" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example9" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "example10" {
  # checkov:skip=CKV_AWS_23: Because
  # checkov:skip=CKV2_AWS_5: Because
  ingress {
    cidr_blocks = [
      "10.0.0.1/32"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}
